--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,17 @@
     tools:context=".MainActivity">
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/tablayout"
+        app:layout_constraintBottom_toTopOf="@id/tab_layout"
         />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tablayout"
+        android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@color/white"
@@ -33,7 +34,7 @@
             />
 
         <com.google.android.material.tabs.TabItem
-            android:id="@+id/save_tab_item"
+            android:id="@+id/favorite_tab_item"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="보관"
