--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,33 +7,42 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.AppCompatButton
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linear_main"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="#E6E2BC"
+        android:elevation="1dp"
+        >
+
+    <Button
         android:id="@+id/search_button"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="30dp"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:background="@drawable/button_shape"
         android:text="검색"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/favorite_button"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/favorite_button"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:layout_marginBottom="30dp"
+        app:layout_constraintTop_toTopOf="@id/linear_main"
+        app:layout_constraintBottom_toBottomOf="@id/linear_main"
+        app:layout_constraintStart_toStartOf="parent"
+        />
+
+    <Button
+        android:id="@+id/favorite_button"
+        android:layout_width="180dp"
+        android:layout_height="60dp"
         android:background="@drawable/button_shape"
         android:text="보관함"
-        android:textSize="16sp"
+        android:textSize="15sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintTop_toTopOf="@id/linear_main"
+        app:layout_constraintBottom_toBottomOf="@id/linear_main"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/search_button" />
-
+        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
