--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,14 +12,14 @@
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="#E6E2BC"
+        android:background="#C8D9ED"
         android:elevation="1dp"
         >
 
     <Button
         android:id="@+id/search_button"
         android:layout_width="180dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@drawable/button_shape"
         android:text="검색"
         android:textSize="15sp"
@@ -33,7 +33,7 @@
     <Button
         android:id="@+id/favorite_button"
         android:layout_width="180dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:background="@drawable/button_shape"
         android:text="보관함"
         android:textSize="15sp"
